# plugins-adapter

./: .pre-commit-config.yaml  .trivyignore  Dockerfile  Makefile  README.md  ext-proc.yaml  filter.yaml  proto-build.sh  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yaml  security-scans.yaml
docs/: build.md
plugins/examples/nemo/: nemo_wrapper_plugin.py  pyproject.toml
plugins/examples/nemo/pii_detect_config/: actions.py
plugins/examples/nemocheck/: README.md  plugin.py
plugins/examples/nemocheck/k8deploy/: config-tools.yaml  server.yaml
plugins/examples/nemocheck/tests/: test_all.py  test_nemocheck.py
plugins/examples/nemocheck_external/: run-server.sh
plugins/examples/nemocheck_external/k8deploy/: deploy_ej.yaml
resources/config/: config.yaml  external_plugin_config.yaml  external_plugin_nemocheck.yaml  nemocheck-internal-config.yaml
src/: server.py
tests/: pytest.ini  test_server.py
